# scitex-dataset

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dataset  pyproject.toml
.github/workflows/: cla.yml  publish-pypi.yml  test.yml
docs/sphinx/: cli_reference.rst  conf.py  index.rst  installation.rst  quickstart.rst  sources.rst
docs/sphinx/api/: scitex_dataset.rst
examples/: 00_run_all.sh  01_fetch_openneuro.py  02_search_datasets.py  03_cli_usage.sh  04_mcp_server.py
scripts/: fetch_openneuro.py
src/scitex_dataset/: __init__.py  _branding.py  database.py  search.py
src/scitex_dataset/_cli/: __init__.py  _introspect.py  _mcp_commands.py
src/scitex_dataset/_mcp/: __init__.py  server.py  tools.py
src/scitex_dataset/_skills/scitex-dataset/: SKILL.md  cli-reference.md  data-sources.md  mcp-tools.md  quick-start.md
src/scitex_dataset/biology/: __init__.py  geo.py
src/scitex_dataset/general/: __init__.py  figshare.py  openml.py  zenodo.py
src/scitex_dataset/medical/: __init__.py  clinicaltrials.py
src/scitex_dataset/neuroscience/: __init__.py  dandi.py  openneuro.py  physionet.py
src/scitex_dataset/pharmacology/: __init__.py  chembl.py  moleculenet.py
src/scitex_dataset/skills/: SKILL.md
tests/: conftest.py  test_branding.py  test_cli.py  test_dandi.py  test_database.py  test_mcp_tools.py  test_openneuro.py  test_physionet.py  test_search.py  test_zenodo.py
